@startuml

title __APP's Class Diagram__\n

  namespace com.example.desktopcontroller {
    class com.example.desktopcontroller.BuildConfig {
    }
  }
  

  namespace com.example.desktopcontroller {
    interface com.example.desktopcontroller.CallbackReceiver {
    }
  }
  

  namespace com.example.desktopcontroller {
    namespace Connect {
      class com.example.desktopcontroller.Connect.ConnectFragment {
      }
    }
  }
  

  namespace com.example.desktopcontroller {
    namespace Keyboard {
      class com.example.desktopcontroller.Keyboard.KeyboardFragment {
      }
    }
  }
  

  namespace com.example.desktopcontroller {
    class com.example.desktopcontroller.MainActivity {
    }
  }
  

  namespace com.example.desktopcontroller {
    abstract class com.example.desktopcontroller.MakeConnection {
    }
  }
  

  namespace com.example.desktopcontroller {
    namespace Mouse {
      class com.example.desktopcontroller.Mouse.MouseFragment {
      }
    }
  }
  

  namespace com.example.desktopcontroller {
    namespace PowerOff {
      class com.example.desktopcontroller.PowerOff.PowerOffFragment {
      }
    }
  }
  

  namespace com.example.desktopcontroller {
    namespace Presentation {
      class com.example.desktopcontroller.Presentation.PresentationFragment {
      }
    }
  }
  

  namespace com.example.desktopcontroller {
    class com.example.desktopcontroller.SendMessageToServer {
    }
  }
  

  com.example.desktopcontroller.Connect.ConnectFragment -up-|> androidx.fragment.app.Fragment
  com.example.desktopcontroller.Keyboard.KeyboardFragment .up.|> android.text.TextWatcher
  com.example.desktopcontroller.Keyboard.KeyboardFragment .up.|> android.view.View.OnClickListener
  com.example.desktopcontroller.Keyboard.KeyboardFragment .up.|> android.view.View.OnTouchListener
  com.example.desktopcontroller.Keyboard.KeyboardFragment -up-|> androidx.fragment.app.Fragment
  com.example.desktopcontroller.MainActivity .up.|> com.google.android.material.navigation.NavigationView.OnNavigationItemSelectedListener
  com.example.desktopcontroller.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.desktopcontroller.MakeConnection .up.|> com.example.desktopcontroller.CallbackReceiver
  com.example.desktopcontroller.MakeConnection -up-|> android.os.AsyncTask
  com.example.desktopcontroller.Mouse.MouseFragment -up-|> androidx.fragment.app.Fragment
  com.example.desktopcontroller.PowerOff.PowerOffFragment .up.|> android.view.View.OnClickListener
  com.example.desktopcontroller.PowerOff.PowerOffFragment -up-|> androidx.fragment.app.Fragment
  com.example.desktopcontroller.Presentation.PresentationFragment .up.|> android.view.View.OnClickListener
  com.example.desktopcontroller.Presentation.PresentationFragment -up-|> androidx.fragment.app.Fragment
  com.example.desktopcontroller.SendMessageToServer -up-|> android.os.AsyncTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
